# agent-evaluator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  STACK.md
.planning/phases/01-trustworthy-score-schema/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md
.planning/phases/02-error-recovery-dimension-fix/: 02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PLAN.md
.planning/phases/03-vendor-coupling-fix/: 03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PLAN.md
.planning/phases/04-deterministic-detectors-first/: 04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PLAN.md
.planning/phases/05-test-coverage-and-ci/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-VERIFICATION.md
.planning/research/: JUDGMENT.md  SUMMARY.md
examples/: sample_run.py
scenarios/: book_flight.py  calendar_scheduling.py  code_generation.py  data_analysis.py  database_query.py  debug_code.py  email_compose.py  file_management.py  math_calculation.py  multi_step_research.py  registry.py  research_topic.py  weather_lookup.py  web_scraping.py
src/agent_evaluator/: __init__.py  cli.py  judge.py  models.py  pricing.py  providers.py  report.py  rubrics.py  runner.py
src/agent_evaluator/dispatch/: GLOSSARY.md  __init__.py  agents.py  constraints.py  llm_agent.py  models.py  report.py  runner.py  scenario.py  scenarios.py  scoring.py  tools.py  world.py
tests/: conftest.py  test_cli.py  test_dispatch_domain.py  test_dispatch_eval.py  test_dispatch_llm.py  test_dispatch_scenarios.py  test_dispatch_scrub.py  test_judge.py  test_judge_integration.py  test_live_smoke.py  test_models.py  test_providers.py  test_report.py  test_report_rendering.py  test_rubrics.py  test_runner.py  test_runner_integration.py
tests/fixtures/anthropic/: agent_response_final.json  (+4 more)
(+3 files in other folders)
